# geai

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
assets/: geai.ico.b64
deno-proxy/: authenticated-main.ts  deno.json  main.ts
docs/: ROADMAP.md
scripts/: clean.bat  dev-run-vs2026.bat  dev-run.bat  release-package-vs2026.bat  release-package.bat
src/: main.cpp  resource.rc  win32_compat.h
